# Agora

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_areas.py  0002_users.py  0003_projects.py  0004_tasks.py  0005_task_comments.py  0006_github.py  0007_google.py  0008_agent.py  0009_rag.py  0010_notifications.py  0011_sprints.py  0012_economics.py  0013_document_files.py  0014_document_versions.py  0015_audit_logs.py  0016_project_progress.py  0017_agent_attachments.py  0018_project_roadmap_fields.py  0019_user_2fa.py  0020_project_roi_detail.py  0021_project_drive_docs.py  0022_area_join_requests.py  0023_user_avatar_text.py  0024_user_last_login.py  0025_project_progress_snapshots.py  0026_catalog_terms.py  0027_agent_token_usage.py  0028_model_pricing.py  0029_token_cost_detail.py  0030_tool_tokens.py  0031_project_is_development.py  0032_adjustments_parent_reqs.py  0033_initiative_catalog.py
backend/app/: __init__.py  bootstrap_admins.py  main.py  seed_dev.py
backend/tests/: conftest.py  factories.py  test_agent.py  test_agent_actions.py  test_analytics.py  test_areas.py  test_audit.py  test_comments.py  test_document_versions.py  test_documents.py  test_economics.py  test_github.py  test_google.py  test_knowledge.py  test_notifications.py  test_projects.py  test_sprints.py  test_tasks.py
(+220 files in other folders)
