[project]
name = "agora-backend"
version = "0.1.0"
description = "Ágora — backend (FastAPI) de la plataforma interna de gestión de proyectos de Invesa."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyjwt>=2.13.0",
    "cryptography>=49.0.0",
    "pgvector>=0.4.2",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
